--- a/.pylintrc
+++ b/.pylintrc
@@ -26,4 +26,4 @@
 #   C0111 = Missing docstring
 
 # Disable the message(s) with the given id(s).
-disable=W0142,W0403,R0201,W0212,W0613,W0232,R0903,W0614,C0111,C0301,R0913,C0103,F0401,W0402,R0914
+disable=W0142,W0403,R0201,W0212,W0613,W0232,R0903,W0614,C0111,C0301,R0913,C0103,F0401,W0402,R0914,C0326,C1801
