--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-BeautifulSoup>=3.2.1
-imageio>=2.1.2
-mechanize>=0.3.3
-numpy>=1.13.3
-Pillow>=4.3.0
-socksipy-branch>=1.01
-win_unicode_console>=0.5
+beautifulsoup4>=4.8.1
+certifi>=2019.9.11
 demjson>=2.2.4
-requests>=2.21.0
-certifi>=2019.3.9
+imageio>=2.5.0
+mechanize>=0.4.4
+numpy>=1.17.2
+Pillow>=6.1.0
+socksipy-branch>=1.1
+win_unicode_console>=0.5
+requests>=2.22.0
