update requirements.txt for #618

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ imageio>=2.5.0
 mechanize>=0.4.4
 numpy>=1.17.2
 Pillow>=6.1.0
-socksipy-branch>=1.1
+PySocks>=1.7.1
 win_unicode_console>=0.5
 requests>=2.22.0
 apng>=0.3.3
