update .gitignore for macOS

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,20 @@ numpy-atlas.dll
 tags.txt
 url_list_*.txt
 test.db.sqlite
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+._*
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
