Added Regex for title blacklist, Added Date update for skips/reaching limit of artist downloads, even if no images are downloaded and wording/typo changes

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,9 @@ __pycache__/*
 .vs/*
 blacklist_members.txt
 blacklist_tags.txt
+blacklist_titles.txt
+batch_job.json
+Dump*
 ffmpeg.exe
 ignore_list.txt
 numpy-atlas.dll
