--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# VSCode files
+.vscode/*
+*.code-workspace
+# virtual env
+venv
 Downloaded*.txt
 _backup/*
 build/*
@@ -24,7 +29,7 @@ testapp*/*
 pixivutil.log*
 .pytest_cache/*
 __pycache__/*
-.vscode/*
+
 .idea/*
 .vs/*
 blacklist_members.txt
