start adding http2 support

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 beautifulsoup4>=4.9.3
 certifi>=2021.5.30
 demjson3>=3.0.0
-mechanize>=0.4.5
+#mechanize>=0.4.5
 # numpy>=1.17.2
+httpx[http2]
 Pillow>=8.3.0
 PySocks>=1.7.1
 # win_unicode_console>=0.5
