--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-test/*.htm linguist-vendored=False
-test/*.html linguist-vendored=False
+test_data/*.htm linguist-vendored=False
+test_data/*.html linguist-vendored=False
 test.new/*.htm linguist-vendored=False
 test.new/*.html linguist-vendored=False
